feat: Add Stock Analytics Agent utilizing Korean Government Stock API
- Implemented stock analytics agent in `agent.py` to analyze stock data using the Stock API.
- Created configuration management in `config.py` for API key and model settings.
- Developed prompts for user interaction in `prompt.py`, detailing API usage and parameters.
- Introduced SSL adapter in `ssl_adapter.py` to handle SSL issues with the Korean Government API.
- Added SSL-compatible API functions in `ssl_api_tool.py` for fetching stock and securities price information.
- Defined OpenAPI specifications in `stock_openapi.yml` for the stock and securities price information services.
- Included error handling and response parsing for both JSON and XML formats in API calls.

--- a/adk-finance-agent/.env.example
+++ b/adk-finance-agent/.env.example
@@ -7,6 +7,9 @@ DART_API_KEY=your_dart_api_key_here_40_characters
 # ECOS API 설정 (필수)
 ECOS_API_KEY=your_ecos_api_key_here
 
+# 주식 API 설정 (필수)
+STOCK_API_KEY=your_stock_api_key_here
+
 # Google AI 설정 (필수 - 둘 중 하나 선택)
 # Vertex AI 사용시
 GOOGLE_GENAI_USE_VERTEXAI=True
